fix margin and gap

--- a/src/app/projects/[slug]/slug.module.css
+++ b/src/app/projects/[slug]/slug.module.css
@@ -76,6 +76,7 @@
   .container1 {
     height: 50vh;
     flex-direction: row;
+    gap: 4rem;
   }
   .contImg {
     width: 50vh;
